[package]
name = "falling-sand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# graphics
vulkano = "0.34.1"

#used for random numbers
rand = "0.8.5"

#math
libmath = "0.2.1"

# used for the chunk manager
fnv = "1.0.7"

# serialise/deserialise
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.195"
serde-big-array = "0.5.1"
ron ="0.8.1"