[package]
name = "falling-sand"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# graphics
vulkano = "0.34.1"

#used for random numbers
rand = "0.8.5"

#math
libmath = "0.2.1"

# used for the chunk manager
fnv = "1.0.7"

# serialise/deserialise
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.195"
serde-big-array = "0.5.1"
ron ="0.8.1"

# errors
env_logger = "0.11.0"
log = "0.4"

# window
winit = {version = "0.28.0"}
# winit_input_helper = "0.14.1"

# wgpu
wgpu = "0.18.0"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
image = {version = "0.24.8", default-features = false, features = ["png", "jpeg"]}
# temporary renderer
pixels = "0.13.0"


# fps counter
fps_counter = "3.0.0"

[profile.dev]
opt-level = 1